<?xml version="1.0"?>
<package format="2">
  <name>homeskies_gazebo</name>
  <version>0.9.2</version>
  <description>
    First Gazebo package for Homeskies in Robocup@Home.
  </description>
  <author>Podshara Chanrungmaneekul, Edan Sneh</author>
  <maintainer email="shon2@uw.edu">Podshara Chanrungmaneekul, Edan Sneh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>fetch_gazebo</depend>

  <exec_depend>fetch_description</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>