<?xml version="1.0"?>
<package format="2">
  <name>homeskies_greeting</name>
  <version>0.0.1</version>
  <description>
    Perception testing package for Homeskies in Robocup@Home.
  </description>
  <author>Podshara Chanrungmaneekul, Edan Sneh</author>
  <maintainer email="shon2@uw.edu">Podshara Chanrungmaneekul, Edan Sneh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>

  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>trajectory_msgs</depend>
</package>